@@ -336,6 +336,9 @@ This method is called when a pin on a instant is defined.  If a pin name
 was not provided and the connection is by position, name will be '' or
 undef.
 
+If you do not need the pin nor var nor port callbacks, consider the
+"$self->new (... use_vars=>0 ...)"  option to accelerate parsing.
+
 =item $self->port ( $name, $objof, $direction, $data_type, $array, $pinnum )
 
 This method is called when a module port is defined.  It may be called
@@ -349,6 +352,9 @@ the data type ('reg', 'user_type_t', 'signed [31:0]', etc).  $array is the
 arraying of the port ('[1:0][2:0]', '', etc).  $pinnum is set to the pin
 number for ANSI style declarations, and 0 for Verilog 1995 declarations
 made outside the port list.
+
+If you do not need the pin nor var nor port callbacks, consider the
+"$self->new (... use_vars=>0 ...)"  option to accelerate parsing.
 
 =item $self->ppdefine ( $defvar, $definition )
 
@@ -382,6 +388,9 @@ or expression).
 
 Note typedefs are included here, because "parameter type" is both a
 variable and a type declaration.
+
+If you do not need the pin nor var nor port callbacks, consider the
+"$self->new (... use_vars=>0 ...)"  option to accelerate parsing.
 
 Below are some example declarations and the callbacks:
 
