@@ -5,6 +5,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.21***
 
+***	Add SigParser->new(use_vars=>0) option to speed parsing.
+
 ****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]
 
 ****	Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]
